Fix tour image sizes on non firefox browsers
- fixes #3170

--- a/frontend/src/app/components/StepModal/index.scss
+++ b/frontend/src/app/components/StepModal/index.scss
@@ -73,6 +73,10 @@
     position: relative;
     width: 580px;
 
+    img {
+      width: 100%;
+    }
+
     .fade {
       background: linear-gradient(transparent, $white);
       bottom: 0;
